# geodesics

./: .gitignore  geodesics.ipynb  plot_3d.blend  pyproject.toml
blenderhelper/: draw.py  draw_data.py  draw_test.py
examples/: double_wormhole.py  double_wormhole_raytracing.py  flat_raytacing.py  frames.py  ori.py  parallel_transport.py  print_stats.py  sphere_projections.py  wormhole.py  wormhole_raytracing.py  wormhole_raytracing_2.py
geodesics/: constants.py  coordinate_map.py  coordinate_map_library.py  draw.py  geodesic.py  geodesic_generator.py  main.py  metric_library.py  metric_space.py  numba_geodesic_generator.py  numpy_geodesic.py  numpy_geodesic_transport.py  scipy_geodesic_generator.py  sphere_projection.py  tangent_vector.py  utils.py
tests/: test_metric_space.py  test_utils.py  utils.py
